kafka/archive/zookeeper.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zookeeper
spec:
  selector:
    matchLabels:
      app: zookeeper
  replicas: 1
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:6.0.1
          ports:
            - containerPort: 2181
