kafka/archive/broker.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: kafka-pods
  labels:
    app: broker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
        kafka.network/default: "true"
    spec:
      containers:
        - name: broker
          image: confluentinc/cp-kafka:7.4.0-2-ubi8
          ports:
            - containerPort: 2185
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: "0.5"
              memory: 1Gi  
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: broker
  name: broker
spec:
  ports:
    - name: "9092"
      port: 9092
      targetPort: 2185
  selector:
    app: broker
