kafka/archive/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: broker
  namespace: default
spec:
  type: ExternalName
  externalName: broker.kafka.svc.cluster.local
  ports:
  - port: 80
